--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": ">=5.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7.27|^6|^7|^8"
+        "phpunit/phpunit": "5.7.27|^6|^7|8.5.22"
     },
     "autoload": {
         "psr-4": {
